# AcadeMCP

./: .gitignore  README.md  classroom_tools.py  google_auth.py  google_classroom_login_test.py  google_services.py  main.py  pyproject.toml
database/: absent_queries.py  google_queries.py  init_db.py  quiz_queries.py
google/: google_auth.py  google_services.py  oauth.py
resources/: aust_routine.json  courses.json
shared/: config.py  db.py
tools/: absent_tools.py  classroom_tools.py  quiz_tools.py  routine_tools.py
